--- a/index.html
+++ b/index.html
@@ -20,33 +20,8 @@
                 <p class="title">Picked colors</p>
                 <span class="clear-all">Clear All</span>
             </header>
+            <ul class="all-colors"></ul>
         </div>
-        <ul class="all-color">
-            <li class="color">
-                <span class="rect"></span>
-                <span class="value">#5372f0</span>
-            </li>
-            <li class="color">
-                <span class="rect"></span>
-                <span class="value">#5372f0</span>
-            </li>
-            <li class="color">
-                <span class="rect"></span>
-                <span class="value">#5372f0</span>
-            </li>
-            <li class="color">
-                <span class="rect"></span>
-                <span class="value">#5372f0</span>
-            </li>
-            <li class="color">
-                <span class="rect"></span>
-                <span class="value">#5372f0</span>
-            </li>
-            <li class="color">
-                <span class="rect"></span>
-                <span class="value">#5372f0</span>
-            </li>
-        </ul>
     </div>
 </body>
 </html>
